# titan-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/api/: cli.cpp  http.cpp  http.h  server.cpp
src/api/python/: titan_bindings.cpp
src/compute/: dispatch.h
src/compute/cpu/: expert_cpu.cpp  matmul_avx.cpp
src/compute/cuda/: activation.cu  attention.cu  cuda_check.h  dequant.cu  fp4.cu  gemv.cu  moe.cu  norm.cu  sampling.cu  sparse.cu
src/core/: config.cpp  config.h  hardware.cpp  hardware.h  logging.cpp  logging.h  types.cpp  types.h
src/inference/: batch.cpp  batch.h  engine.cpp  engine.h  kv_cache.cpp  kv_cache.h  scheduler.cpp  speculative.cpp  speculative.h
src/memory/: memory_manager.cpp  memory_manager.h  nvme_pool.cpp  prefetcher.cpp  prefetcher.h  ram_pool.cpp  vram_pool.cpp
src/model/: architecture.h  dense.cpp  dense.h  gguf_loader.cpp  gguf_loader.h  loader.cpp  loader.h  moe.cpp  moe.h  quantizer.cpp  sparsity.cpp  sparsity.h  tokenizer.cpp  tokenizer.h
tests/: test_kernels.cu  test_memory.cpp  test_types.cpp
tools/: benchmark.py  convert.py  convert_nvfp4.py  convert_titan.py  moeify.py
